# dummy_project

./: .gitmodules  .vimrc  BOOST.cmake  CMakeLists.txt  Log4CXX.cmake  README.md  calc_exceptions.h  calculator.cc  calculator.h  calculator_exception.h  constant.h  customer.cc  customer.h  fixed_queue.cc  fixed_queue.h  icalculator.h  icustomer.h  imovie.h  imovierepo.h  ioperandsmemory.h  ioperator.h  ioperatorfactory.h  iproject.h  irental.h  irpncalculator.h  log4cxx.properties  main.cc  main.cpp  movie.cc  movie.h  movieprice.cc  movieprice.h  movierepo.cc  movierepo.h  operand.cc  operand.h  operandsmemory.cc  operandsmemory.h  operations.cc  operations.h  (+35 more)
Calculator/: .Calculator.cc.swp  .Calculator.h.swp  Calculator.cc  Calculator.h  ICalculator.h
Parser/: .Calculator.cc.swp  .Calculator.h.swp  .IParser.h.swp  .Parser.cc.swp  .Parser.h.swp  IParser.h  Parser.cc  Parser.h
components/include/proj/: iproject.h
components/include/shared_lib/: ishared_lib.h
components/include/utils/: external_logger.h  ilogger.h  logger.h
components/proj/: CMakeLists.txt  project.cc
components/proj/impl/: project.h
components/shared_lib/: CMakeLists.txt  shared_lib.cc
components/shared_lib/impl/shared_lib/: shared_lib.h
components/utils/: CMakeLists.txt  boostlogger.cc  log4cxxlogger.cc  std_logger.cc  std_logger.h
components/utils/impl/logger/: boostlogger.h  log4cxxlogger.h  logger_impl.h  proj_logger.h  std_logger.h
components/utils/include/utils/logger/: proj_logger.h
include/: fixed_queue.h  istring_generator.h  project.h  string_generator.h
src/: fixed_queue.cc  project.cc  string_generator.cc
src/Calculator/: calculator.cpp
src/Calculator/include/: calculator.h
test/: CMakeLists.txt  calculator_test.cc  calculator_test.cpp  fixed_size_queue_test.cc  parser_test.cc  project_test.cc  project_test.cc.autosave  rpncalculator_test.cpp  run_tests.cpp  test_calculator_proxy.h  utils_test.cc
test/mock/: irpncalculator_mock.h
types/: .CustomStack.h.swp  CustomStack.h  utils.h
